# ChangeLog for media-fonts/mplus-outline-fonts
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/ChangeLog,v 1.42 2013/05/23 14:37:30 hattya Exp $

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre052.ebuild:
  ia64 stable

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre052.ebuild:
  amd64 stable

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre052.ebuild:
  x86 stable

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  -mplus-outline-fonts-0_pre040.ebuild, -mplus-outline-fonts-0_pre043-r1.ebuild,
  -mplus-outline-fonts-0_pre043.ebuild, -mplus-outline-fonts-0_pre046.ebuild:
  remove old ebuilds

*mplus-outline-fonts-0_pre055 (23 May 2013)

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  +mplus-outline-fonts-0_pre055.ebuild:
  new upstream release

*mplus-outline-fonts-0_pre052 (08 Oct 2012)

  08 Oct 2012; Akinori Hattori <hattya@gentoo.org>
  +mplus-outline-fonts-0_pre052.ebuild:
  new upstream release.

*mplus-outline-fonts-0_pre046 (28 Jan 2012)

  28 Jan 2012; MATSUU Takuto <matsuu@gentoo.org>
  +mplus-outline-fonts-0_pre046.ebuild:
  Version bumped.

*mplus-outline-fonts-0_pre043-r1 (18 Dec 2011)

  18 Dec 2011; Naohiro Aota <naota@gentoo.org>
  +mplus-outline-fonts-0_pre043-r1.ebuild:
  Improve DESCRIPTION, HOMEPAGE and LICENSE. patch by
  demmamussabebonk@gmail.com bug 393301

  03 Dec 2011; Fabian Groffen <grobian@gentoo.org>
  mplus-outline-fonts-0_pre043.ebuild:
  Fix USE=ipafont for Prefix, bump to EAPI=3, by MATSUI Tetsushi in bug #393001

*mplus-outline-fonts-0_pre043 (30 Sep 2011)

  30 Sep 2011; MATSUU Takuto <matsuu@gentoo.org>
  -mplus-outline-fonts-0_pre037.ebuild, +mplus-outline-fonts-0_pre043.ebuild:
  Version bumped. Removed old version.

  14 Jun 2011; Fabian Groffen <grobian@gentoo.org>
  mplus-outline-fonts-0_pre040.ebuild: