@@ -4,15 +4,17 @@ Hash: SHA256
 DIST mplus-TESTFLIGHT-030.tar.gz 17620215 SHA256 558b3a7f2f6de6556d1e9727ca6f2dd1fa1d60f343f532d1012059d1c45e9583
 DIST mplus-TESTFLIGHT-052.tar.xz 8302388 SHA256 a2e0f93e1eeb1d1dae5cf215e35df70de9d692fb3bb42eed85b9b9b590966220 SHA512 b135f4ebaac97540787064c89e8cf747317015b44d083ecec903b0a4c8bcac561ae99d7cf187119cec94199609810a0d63b24cc0991a5a42137304093d5c6423 WHIRLPOOL 862b2517d2712b079173e0f26240dc5c2a1517bb8fd4b2ba325d5ed10a20499c053f3e4ffe5f22c78c28205aa0eab6ba009d76f3185c0d7f130657b3274cceb6
 DIST mplus-TESTFLIGHT-055.tar.xz 8853404 SHA256 19b2139d69c7bf4397920767affa01d2bad200610147abbcd1e2d91b10017f4d SHA512 02846d2291e9d57b3b53fa433400fd4551361bb298c1db951606f24d3baf3853a656329df458b80f504876f0b88afa84c2be2540a2868fc578d94a04d616188a WHIRLPOOL 959747f0e1c3aa09bf494201bf3a34ac1bb407c399c9e393cd0f200eeef21e16a3ad8db8ff0dbaa69011c00dbc844a16faa9d945d5b4cd6c7ec4d50f8fe11ab2
+DIST mplus-TESTFLIGHT-056.tar.xz 9000172 SHA256 f0cc16810effb5e21e559a15895525a9e4179765c5ab44f9140afd18e8ce7b8e SHA512 d88791d59e9ed377d000459f1609bab266a15327fcc51ed0ca23cb5a2d52d53e72a6fa705d8bd0fc8d96643b9e91c3d896424d05270b982f05946ed9a75e8d31 WHIRLPOOL a91b2e19e4d80ed755a427997c0e5c8635dc293eab8b223d42b67b51ba23504a681eb68cbc0526bdcd6b35dd5fc50fd8f6ac114b345561ac209ca5d135014165
 EBUILD mplus-outline-fonts-0_pre030-r1.ebuild 1053 SHA256 fe9d44811e62f9c57c6797b0c7c92ce3b1f8fcf7d94611eb6dbfd3326baa6131 SHA512 2cb466928bf7e6bb7dc3b9d51393be339a6bfc83c3cc2ed9a2c2575956307680f83ccb4fbaa3d301d276eae4bad72aaa091bbb9e085336ada3d3f5f0becd0615 WHIRLPOOL 6dcba7b007225a77734c484d1d1b50157562e1b0f30b6993d28aa007b03624c35fc2f4938ab864f2d3fb636d1068255980be39ead986afdf2beb7eb023346f8b
 EBUILD mplus-outline-fonts-0_pre052.ebuild 1083 SHA256 a55e008e055d4184ed176ea344e1505387edbaad1c7e9361bad2e4f7e747f3a7 SHA512 31b33c03c20c6163fc1916b0c842b22504b310686838787cbee62041e491e4af4828ae6bcd9ac32c8253afc1e6882a7159fcaca62c1765fff6cfe2cf0975567b WHIRLPOOL d415f89264e8436b54274f5308e22163621ba9972e7974d3ce86b97b3b74b595637dddd1f93aed9ee86714ed609297f0b564fe77bd51d47d8e3693f9323c8c8d
 EBUILD mplus-outline-fonts-0_pre055.ebuild 1086 SHA256 38f6c04dcd4c0c51a76c030571546ea5b3b16122ca78e3a7a34ab73bd8a21a9c SHA512 630f32bfbefc81b138314f3282a86144245b51f484eb282c1a6c04a71e232ca91bb17d8422cf6b633e8787214209fbc3b76a1c59808e3776fb0eb9be8cc11bd9 WHIRLPOOL 2b33149ddb072314e3d5d2890188866f76d2b55942fa06191f8b85a52a9f47293a5514d0cda1c6c9ac93e21631fcf9361977666728c30425069723cbfdd84443
-MISC ChangeLog 7304 SHA256 6d633c711645ce1848e8d23be521b03bf32173d4ba59591f6205de0736346ada SHA512 bfc48ca56d7f3941e2938333d99b7f9434943c5e762d6e6f67148b6e45a707534152e93f9554583e9ca11f5af6ac0be411ccaaca4269156f23acb22a60f5b992 WHIRLPOOL f13df7a7fac402ae2e9928d3ffd04077133acbee194f4d7ac24f249a735eb119ed451823bedca49207752ca163e081b4719ad9fbf2f7e0f510a26dff7c76cb06
+EBUILD mplus-outline-fonts-0_pre056.ebuild 1068 SHA256 4601c4cc21f2f85e6fee95a335a257deaa007ed79479868fdbbcef0112f33cb7 SHA512 cacd8f90d41defa8874e1bd788d8cbc26c0dc5145bc98b8a998b806dd403f30338e3257c1fe5541f31dc10c2769b679e2c17bfb435bc1750990f66bebf942c87 WHIRLPOOL 8c82fe94c1e4cc5f3141a1bb88cfa6cd5d282407402fe5bc81dd9584694fdb918f6c46154213f52be7c521dc52b6cab64166c7740f3c8130900c3adaa72fd660
+MISC ChangeLog 7464 SHA256 f53194d34eec50a74d3ffd69eee588acf23489397632516142d73a02d7424aa2 SHA512 e92afb36a42feeab377259346e2312384c09dc575d89863bcc4016823a84b6726f6c4fde9f5f08cce5e993bdd0b0afeef58591b638d18c61169a335c59f4b104 WHIRLPOOL f4e1dcea050c2a0932ece80d7e183d60d99b2277941573811ee3e5df717e741238b5a84d2eb894d91845a670d1d7656425367d52b2459eab9d2ab7507686212b
 MISC metadata.xml 285 SHA256 75c916c235e71f1c9f70ade5d259a3faaba30dcf8fb5cbfb2459cb21f937ddd4 SHA512 e637f3a989c8cdced93149686310cc458e35b6823efecd79e2852047da52ce6c4967645ba5743dc02324552711b31998e1f17bb7ce9764b1fc42a15d3b75c07c WHIRLPOOL 8ebcc5836ccdf91289f40ba505b0f16d902d176bd36a90a729956a01ca15eac0c8d30856fa224acb5e2e7641c18c12ce3fb194cf12fd61322c0ce29c1d5f12f9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGeKcMACgkQL46suuyRem2HGQCeIfIU+E7j7cSYDVbzUZ2pcHMB
-nEUAnA269/lYk4zChi4fVEpPSyK82wAF
-=1O6R
+iEYEAREIAAYFAlH8hGEACgkQL46suuyRem2TngCfYbN14nPU/VZnGLKJp+CHMi78
+FE8AnR015MHmmjzBrwHxpIGe2N1ctEkc
+=j26I
 -----END PGP SIGNATURE-----
